--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ members = [
 
 [dependencies]
 image = "0.24.6"
+core = {path="core"}
 graph = {path="graph"}
 texture_generators = {path="texture_generators"}
