--- a/graph/Cargo.toml
+++ b/graph/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tex_core = {path = "../tex_core"}
 petgraph = "0.6.3"
