--- a/texture_generators/Cargo.toml
+++ b/texture_generators/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-core = {path = "../core"}
+tex_core = {path = "../tex_core"}
 graph = {path= "../graph"}
 image = "0.24.6"
